--- a/css/style.css
+++ b/css/style.css
@@ -586,7 +586,7 @@ html[xmlns] .clearfix {
   padding: 3px 5px;
   border-radius: 3px;
   cursor: pointer;
-  color: #e5e5e6;
+  color: #555;
 }
 
 #mobile-menu {
